force-app/main/default/objects/Opportunity/fields/Antiguedad_Oportunidad__c.field-meta.xml
<CustomField>
    <fullName>Antiguedad_Oportunidad__c</fullName>
    <formula>if ( TODAY() -  datevalue(CreatedDate) &gt; 365 , &apos;7. mas de un anio&apos;,
 if ( TODAY() -  datevalue(CreatedDate) &gt; 180 , &apos;6. mas de un semestre&apos;,
 if ( TODAY() -  datevalue(CreatedDate) &gt; 90 , &apos;5. mas de un trimestre&apos;,
 if ( TODAY() -  datevalue(CreatedDate) &gt; 30 , &apos;4. mas de un mes&apos;,
 if ( TODAY() -  datevalue(CreatedDate) &gt; 15 , &apos;3. mas de una quincena&apos;,
 if ( TODAY() -  datevalue(CreatedDate) &gt; 7 , &apos;2. mas de una semana&apos;,
 &apos;1. menos de una semana&apos;
)
)
)
)
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Antiguedad Oportunidad</label>
    <type>Text</type>
</CustomField>