force-app/main/default/objects/Opportunity/fields/Cedula__c.field-meta.xml
<CustomField>
    <fullName>Cedula__c</fullName>
    <defaultValue>false</defaultValue>
    <description>registra si ya se recibió la cédula</description>
    <inlineHelpText>Marcar si ya se recibió la cédula</inlineHelpText>
    <label>Cédula</label>
    <type>Checkbox</type>
</CustomField>